crates/wac-parser/tests/resolution/fail/borrow-in-func-result.wac
package test:comp;

interface foo {
    resource x;
    type a = borrow<x>;
    f: func() -> result<a>;
}
